# sample_trtis

./: .gitignore  README.md  build_all_containers.sh  build_custom_models.sh  docker-compose.gpu.yml  docker-compose.yml  fetch_default_models.sh  setup_custom_backend.sh  setup_trtis_docker_containers.sh
docker/: DockerFile
docker/client/: Dockerfile  build_client_library.sh
docker/custom_backend/: Dockerfile  Dockerfile.gpu  build_custom_backend.sh  clone_trtis_custom_backend_sdk.sh  install_core_packages.sh
docker/data_uploader/: Dockerfile  entry.sh
docker/install_script/: install_mecab.sh
docker/server/: Dockerfile
model_settings/: README.md
model_settings/face_recognition_model/: config.pbtxt
model_settings/mecab_model/: config.pbtxt
model_settings/sample_instance/: config.pbtxt
model_settings/sample_sequence/: config.pbtxt
src/client/python/: client.py  custom_decorator.py  face_recognition_client.py  image_preprocess.py  model.py  sample_face_recog.py  sample_face_recog2.py  sample_instance_client.py  sample_mecab.py  sample_sequence_client.py  util.py
src/custom_backend/face_recognition_model/: .gitignore  CMakeLists.txt  face_recognition_model.cc  face_wrapper.cc  face_wrapper.h
src/custom_backend/mecab_model/: CMakeLists.txt  mecab_model.cc
src/custom_backend/sample_instance/: CMakeLists.txt  sample_instance.cc
src/custom_backend/sample_sequence/: CMakeLists.txt  sample_sequence.cc
src/data_uploader/: ui.py
